--- a/templates/root.html
+++ b/templates/root.html
@@ -36,7 +36,7 @@
 <div class="sponsors">
   <a name="sponsors"></a>
   <h2>
-    This event was made possibly with the<br>
+    This event was made possible with the<br>
     help of our generous sponsors
   </h2>
   <h3>Bronze Sponsors</h3>
