--- a/templates/blocks/sponsor.html
+++ b/templates/blocks/sponsor.html
@@ -1,6 +1,6 @@
 <li class="sponsor flex flex-wrap">
-  <div class="sponsor-blurb col-75">
-    <h4>
+  <div class="sponsor-info col-75">
+    <h4 class="row">
       <a href="{{ this.url }}">
         {{ this.name }}
       </a>
