--- a/templates/blocks/sponsor.html
+++ b/templates/blocks/sponsor.html
@@ -1,4 +1,4 @@
-<li class="sponsor flex flex-wrap">
+<li class="sponsor flex">
   <div class="sponsor-info col-75">
     <h4 class="row">
       <a href="{{ this.url }}">
