--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://use.typekit.net/bmw2mzd.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
@@ -8,21 +9,21 @@
 <body>
   <header>
     <h1>
-      <span class="red">pycon ph</span><br>
-      <span class="gray">CEBU CITY 2016</span>
+      <div class="red">pycon ph</div>
+      <div class="gray">CEBU CITY 2016</div>
     </h1>
-    <nav>
-      <ul class="flex">
-        <li><a href="/#about">About</a></li>
-        <li><a href="/#theme">Theme</a></li>
-        <li><a href="/#venue">Venue</a></li>
-        <li><a href="/#speakers">Speakers</a></li>
-        <li><a href="#">Schedule</a></li>
-        <li><a href="#">Tickets</a></li>
-        <li><a href="/#sponsors">Sponsors</a></li>
-      </ul>
-    </nav>
   </header>
+  <nav>
+    <ul class="flex">
+      <li><a href="/#about">About</a></li>
+      <li><a href="/#theme">Theme</a></li>
+      <li><a href="/#venue">Venue</a></li>
+      <li><a href="/#speakers">Speakers</a></li>
+      <li><a href="#">Schedule</a></li>
+      <li><a href="#">Tickets</a></li>
+      <li><a href="/#sponsors">Sponsors</a></li>
+    </ul>
+  </nav>
   {% block body %}{% endblock %}
   <footer>
     Made with love by the volunteers of <a href="http://python.ph">Python.PH, Inc.</a><br>
