--- a/templates/root.html
+++ b/templates/root.html
@@ -40,7 +40,7 @@
     help of our generous sponsors
   </h2>
   <h3>Bronze Sponsors</h3>
-  <ul class="flex flex-wrap">
+  <ul class="flex">
     {% for blk in this.bronze_sponsors.blocks %}
       {{ blk }}
     {% endfor %}
