--- a/templates/blocks/sponsor.html
+++ b/templates/blocks/sponsor.html
@@ -1,11 +1,11 @@
 <li class="sponsor flex">
-  <div class="sponsor-info col-75">
-    <h4 class="row">
-      <a href="{{ this.url }}">
-        {{ this.name }}
-      </a>
-    </h4>
+  <h4 class="row">
+    <a href="{{ this.url }}">
+      {{ this.name }}
+    </a>
+  </h4>
+  <img class="col-25" src="{{ this.logo|url }}">
+  <div class="col-75">
     {{ this.blurb }}
   </div>
-  <img class="col-25" src="{{ this.logo|url }}">
 </li>
