--- a/templates/root.html
+++ b/templates/root.html
@@ -39,8 +39,14 @@
     This event was made possible with the<br>
     help of our generous sponsors
   </h2>
+  <h3>Gold Sponsors</h3>
+  <ul>
+    {% for blk in this.gold_sponsors.blocks %}
+      {{ blk }}
+    {% endfor %}
+  </ul>
   <h3>Bronze Sponsors</h3>
-  <ul class="flex">
+  <ul>
     {% for blk in this.bronze_sponsors.blocks %}
       {{ blk }}
     {% endfor %}
