Remove background attachment for smaller displays

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -213,6 +213,7 @@ footer {
 @media (max-width: 600px) {
   header {
     background-size: cover;
+    background-attachment: scroll;
     height: 100vh;
   }
   h1 {
