--- a/templates/blocks/speaker.html
+++ b/templates/blocks/speaker.html
@@ -1,8 +1,8 @@
-<div class="speaker flex row">
+<div class="speaker flex">
   <div class="col-25">
     <img src="{{ this.photo|url }}">
   </div>
-  <div class="speaker-info flex-auto">
+  <div class="speaker-info col-75">
     <h3>{{ this.name }}</h3>
     {{ this.bio }}
   </div>
