--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -239,6 +239,9 @@ footer {
   h1 {
     font-size: 3rem;
   }
+  .speaker img {
+    max-width: 50%;
+  }
   .sponsor img {
     margin: 1.5rem 0;
   }
