--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
+<div class="page">
   <h2>{{ this.title }}</h2>
   {{ this.body }}
+</div>
 {% endblock %}
