--- a/templates/root.html
+++ b/templates/root.html
@@ -30,6 +30,15 @@
     {{ blk }}
   {% endfor %}
 </div>
+<div id="tickets">
+  <h2>Tickets</h2>
+  <div
+    data-tb="ticket-form"
+    data-event="4703"
+    data-headline='false'
+  ></div>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://cdn.ticketbase.com/widgets/v0.1/ticketbase.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','ticketbase-wjs');</script>
+</div>
 <div id="sponsors">
   <h2>
     This event was made possible with the<br>
