--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
       <li><a data-scroll href="/#venue">Venue</a></li>
       <li><a data-scroll href="/#speakers">Speakers</a></li>
       <li><a data-scroll href="#">Schedule</a></li>
-      <li><a data-scroll href="#">Tickets</a></li>
+      <li><a data-scroll href="/#tickets">Tickets</a></li>
       <li><a data-scroll href="/#sponsors">Sponsors</a></li>
     </ul>
   </nav>
