Add link to coc

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,6 +30,8 @@
   </nav>
   {% block body %}{% endblock %}
   <footer>
+    Attendees are expected to follow our
+    <a href="{{ '/code-of-conduct'|url }}">Code of Conduct</a><br>
     Made with love by the volunteers of <a href="http://python.ph">Python.PH, Inc.</a><br>
     Illustrations by <a href="http://happygaraje.com/">Happy Garaje</a>
   </footer>
