Add schedule section

--- a/templates/root.html
+++ b/templates/root.html
@@ -24,6 +24,10 @@
     Photo by Storm Crypt
   </a>
 </div>
+<div id="schedule">
+  <h2>Schedule</h2>
+  {{ this.schedule }}
+</div>
 <div id="speakers">
   <h2>Speakers</h2>
   {% for blk in this.speakers.blocks %}
