--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -141,6 +141,12 @@ nav a.active {
   position: relative;
 }
 
+#schedule {
+  max-width: 60rem;
+  margin: 0 auto;
+  padding: 3rem 1.5rem;
+}
+
 .venue-wrap {
   max-width: 80rem;
   margin: 0 auto;
