--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
       <li><a data-scroll href="/#theme">Theme</a></li>
       <li><a data-scroll href="/#venue">Venue</a></li>
       <li><a data-scroll href="/#speakers">Speakers</a></li>
-      <li><a data-scroll href="#">Schedule</a></li>
+      <li><a data-scroll href="/#schedule">Schedule</a></li>
       <li><a data-scroll href="/#tickets">Tickets</a></li>
       <li><a data-scroll href="/#sponsors">Sponsors</a></li>
     </ul>
