--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -135,42 +135,33 @@ nav a.active {
 }
 
 #venue {
-  background: url(upcebu.jpg) no-repeat center bottom;
-  background-size: cover;
   margin: 3rem 0;
   position: relative;
+  align-items: stretch;
 }
 
-#schedule {
-  max-width: 60rem;
-  margin: 0 auto;
-  padding: 3rem 1.5rem;
+.venue-map {
+  pointer-events: none;
 }
 
-.venue-wrap {
-  max-width: 80rem;
-  margin: 0 auto;
-  text-align: right;
+.venue-map iframe {
+  width: 100%;
+  height: 100vh;
+  border: 0;
 }
 
 .venue-text {
   display: inline-block;
   text-align: left;
   background: white;
-  min-height: 100vh;
+  max-width: 40rem;
   padding: 0 3rem;
 }
 
-.venue-attrib {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  font-size: small;
-  display: inline-block;
-  margin: 1rem;
-  padding: 0 0.5rem;
-  color: white;
-  background: rgba(0, 0, 0, 0.5);
+#schedule {
+  max-width: 60rem;
+  margin: 0 auto;
+  padding: 3rem 1.5rem;
 }
 
 #speakers {
@@ -261,6 +252,11 @@ footer {
   .col-50,
   .col-25 {
     width: 100%;
+  }
+  header {
+    background-size: 90rem;
+    background-attachment: scroll;
+    height: 30rem;
   }
   h1 {
     font-size: 3rem;
