--- a/templates/blocks/speaker.html
+++ b/templates/blocks/speaker.html
@@ -1,4 +1,4 @@
-<div class="speaker flex">
+<div class="speaker col-50 flex">
   <div class="col-25">
     <img src="{{ this.photo|url }}">
   </div>
