--- a/templates/root.html
+++ b/templates/root.html
@@ -28,9 +28,11 @@
 </div>
 <div id="speakers">
   <h2>Speakers</h2>
+  <div class="flex flex-wrap">
   {% for blk in this.speakers.blocks %}
     {{ blk }}
   {% endfor %}
+  </div>
 </div>
 <div id="tickets">
   <h2>Tickets</h2>
