Add speakers note

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
 <title>{% block title %}{{ this.title }}{% endblock %}</title>
 <body>
   <header>
-    <h1>
+    <h1 class="center">
       <div class="red">pycon ph</div>
       <div class="gray">CEBU CITY 2016</div>
     </h1>
@@ -29,7 +29,7 @@
     </ul>
   </nav>
   {% block body %}{% endblock %}
-  <footer>
+  <footer class="center">
     Attendees are expected to follow our
     <a href="{{ '/code-of-conduct'|url }}">Code of Conduct</a><br>
     Made with love by the volunteers of <a href="http://python.ph">Python.PH, Inc.</a><br>
