--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -9,6 +9,7 @@
 .col-75 { width: 75% }
 .col-50 { width: 50% }
 .col-25 { width: 25% }
+.center { text-align: center; }
 
 body {
   font: 20px/1.5 museo-slab, serif;
@@ -54,7 +55,6 @@ header {
 
 h1 {
   margin: 0;
-  text-align: center;
   font-size: 6rem;
 }
 
@@ -174,7 +174,6 @@ nav a.active {
 
 #speakers h2 {
   font-size: 4rem;
-  text-align: center;
   margin-bottom: 3rem;
 }
 
@@ -208,7 +207,6 @@ nav a.active {
   max-width: 40rem;
   margin: 0 auto;
   padding: 3rem 1.5rem;
-  text-align: center;
 }
 
 #sponsors h2 {
@@ -235,7 +233,6 @@ nav a.active {
 }
 
 footer {
-  text-align: center;
   margin-top: 25vh;
   padding: 1.5rem;
 }
