Fix missing closing tag

--- a/templates/root.html
+++ b/templates/root.html
@@ -35,6 +35,7 @@
     <div class="row center">
       <small>More speakers to follow...</small>
     </div>
+  </div>
 </div>
 <div id="tickets">
   <h2>Tickets</h2>
