Add speakers topic

--- a/templates/blocks/speaker.html
+++ b/templates/blocks/speaker.html
@@ -4,6 +4,7 @@
   </div>
   <div class="speaker-info col-75">
     <h3>{{ this.name }}</h3>
+    <h4>{{ this.topic }}</h4>
     {{ this.bio }}
   </div>
 </div>
