Add event date in header

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
   <header>
     <h1 class="center">
       <div class="red">pycon ph</div>
-      <div class="gray">CEBU CITY 2016</div>
+      <div class="gray">CEBU CITY, FEBRUARY 27-28</div>
     </h1>
   </header>
   <nav data-gumshoe-header>
