Add marketing partners layout

--- a/templates/root.html
+++ b/templates/root.html
@@ -90,6 +90,12 @@
       {{ blk }}
     {% endfor %}
   </ul>
+  <h2>Marketing Partners</h2>
+  <ul>
+    {% for blk in this.marketing_partners.blocks %}
+      {{ blk }}
+    {% endfor %}
+  </ul>
   <p>
     Interested in sponsoring this event?
     Inquire at <a href="mailto:pycon@python.ph">pycon@python.ph</a>
