--- a/templates/blocks/speaker.html
+++ b/templates/blocks/speaker.html
@@ -1,8 +1,6 @@
-<div class="speaker col-50 flex">
-  <div class="col-25">
-    <img src="{{ this.photo|url }}">
-  </div>
-  <div class="speaker-info col-75">
+<div class="speaker col-50">
+  <img class="col-50" src="{{ this.photo|url }}">
+  <div class="speaker-info">
     <h3>{{ this.name }}</h3>
     <h4>{{ this.topic }}</h4>
     {{ this.bio }}
