Add Media Partner block and add Rappler as Media Partner

--- a/templates/root.html
+++ b/templates/root.html
@@ -96,6 +96,12 @@
       {{ blk }}
     {% endfor %}
   </ul>
+  <h2>Media Partners</h2>
+  <ul>
+    {% for blk in this.media_partners.blocks %}
+      {{ blk }}
+    {% endfor %}
+  </ul>
   <p>
     Interested in sponsoring this event?
     Inquire at <a href="mailto:pycon@python.ph">pycon@python.ph</a>
