--- a/templates/blocks/speaker.html
+++ b/templates/blocks/speaker.html
@@ -1,8 +1,9 @@
-<div class="speaker col-50">
-  <img class="col-50" src="{{ this.photo|url }}">
-  <div class="speaker-info">
-    <h3>{{ this.name }}</h3>
-    <h4>{{ this.topic }}</h4>
-    {{ this.bio }}
+<div class="speaker col-25">
+  <div class="speaker-box"  style="background-image: url({{ this.photo|url }})">
+    <div class="speaker-info">
+      <h3>{{ this.name }}</h3>
+      <h4>{{ this.topic }}</h4>
+      <div class="bio">{{ this.bio }}</div>
+    </div>
   </div>
 </div>
