--- a/templates/blocks/sponsor.html
+++ b/templates/blocks/sponsor.html
@@ -5,7 +5,7 @@
     </a>
   </h4>
   <img class="col-25" src="{{ this.logo|url }}">
-  <div class="col-75">
+  <div class="blurb col-75">
     {{ this.blurb }}
   </div>
 </li>
