--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -165,6 +165,7 @@ nav a.active {
 }
 
 .timeslot td {
+  font-size: 0.8em;
   vertical-align: top;
 }
 
@@ -185,8 +186,6 @@ nav a.active {
 }
 
 #speakers {
-  max-width: 80rem;
-  margin: 0 auto;
   background: url(girlandnoy.png) no-repeat center 6rem;
   background-size: 25rem;
   padding: 30rem 1.5rem 1.5rem;
@@ -201,11 +200,14 @@ nav a.active {
   padding: 1.5rem;
 }
 
-.speaker img {
-  border-radius: 50%;
+.speaker-box {
+  padding-top: 100%;
+  background: center top no-repeat;
+  background-size: contain;
 }
 
 .speaker-info {
+  background: white;
   padding: 1.5rem;
 }
 
@@ -215,6 +217,10 @@ nav a.active {
 
 .speaker-info h4 {
   margin-top: 0;
+}
+
+.speaker-info .bio {
+  font-size: 0.8em;
 }
 
 #tickets {
@@ -254,6 +260,10 @@ nav a.active {
 
 .sponsor img {
   margin: 1.5rem 1.5rem 1.5rem -1.5rem;
+}
+
+.sponsor .blurb {
+  font-size: 0.8em;
 }
 
 footer {
