--- a/templates/blocks/media_partner.html
+++ b/templates/blocks/media_partner.html
@@ -1,11 +1,1 @@
-<li class="sponsor flex">
-  <h4 class="row">
-    <a href="{{ this.url }}">
-      {{ this.name }}
-    </a>
-  </h4>
-  <img class="col-25" src="{{ this.logo|url }}">
-  <div class="col-75">
-    {{ this.blurb }}
-  </div>
-</li>
+{% extends "blocks/sponsor.html" %}
